k8s/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-lab
  labels:
    name: otel-lab
